...
                    android:minHeight="?attr/actionBarSize"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_mlarge"
                    android:paddingRight="@dimen/spacing_mlarge">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorTextAction" />

                    <TextView
...
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

                <TextView
...
                android:orientation="vertical"

                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/profilePhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

...
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/profileMajor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />

...
                android:minHeight="?attr/actionBarSize"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge">

                <EditText
                    android:id="@+id/profileAboutMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorTextAction" />
...
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/spacing_large"
                android:paddingVertical="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/edit_profile"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
...
                    android:text="Save Info"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="@color/grey_60" />

                <TextView
                    android:id="@+id/login_logout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_weight="1"
                    android:background="@drawable/btn_dark"
                    android:backgroundTint="@color/purple_500"
                    android:clickable="true"
...
                    android:textColor="@color/colorBackground" />


            </LinearLayout>

            <Button
                android:id="@+id/profileGoHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goHome"
                android:text="Home" />


...
